# Atomic

./: .gitignore  Atomic语言设计文档5.0  Atomic语言设计文档6.txt  Cargo.toml  Makefile  shell.nix  设计文档.txt
.cargo/: config.toml
.github/workflows/: build.yml
docs/: windows-setup.md
examples/: deepseek_chat.at
lsp/: Cargo.toml
lsp/src/: main.rs
scripts/: build-dist.sh  build.sh  fix_build_call.py
src/: lexer.rs  lib.rs  main.rs  typecheck.rs
src/codegen/: expr.rs  for_loop.rs  jit.rs  map_set.rs  misc.rs  mod.rs  pattern.rs  stmt.rs
src/codegen/builtins/: concurrency.rs  enum_option.rs  lazy.rs  list_hof.rs  map_set.rs  mod.rs  stdlib.rs  string.rs
src/codegen/runtime/: file_io.rs  list.rs  map_set.rs  math_random.rs  mod.rs  print.rs  rc.rs  string.rs
tests/: integration.rs
vscode/atomic-lang/: package.json  tsconfig.json
vscode/atomic-lang/src/: extension.ts
vscode/atomic-lang/syntaxes/: atomic.tmLanguage.json
